<?xml version="1.0" encoding="utf-8"?>
<resources>

    <integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>

    <string name="app_state_local">local_testing</string>
    <string name="app_state_online">online_run</string>

    <string name="app_state">@string/app_state_online</string>

    <string name="app_name">Fordrinking</string>
    <string name="toolbar_title">Toolbar with Navigation Drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_login">Log in</string>
    <string name="drawer_signup">Sign up</string>
    <string name="drawer_explore">Explore</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_message">Message</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_feedback">Send Feedback</string>
    <string name="drawer_default">Default</string>

    <string name="icon_login">&#xf18e;</string>
    <string name="icon_signup">&#xf234;</string>
    <string name="icon_explore">&#xf0ac;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_message">&#xf0e0;</string>
    <string name="icon_logout">&#xf235;</string>
    <string name="icon_repost">&#xf045;</string>
    <string name="icon_comment">&#xf0e5;</string>
    <string name="icon_like">&#xf087;</string>

    <string name="url_origin">http://drink.sinaapp.com</string>
    <string name="url_origin_local">http://fordrinking.com</string>

    <string name="url_signup">/signup-client</string>
    <string name="url_login">/login-client</string>
    <string name="url_newest_blog">/get-blog-client</string>
    <string name="url_more_blog">/more-blog-client</string>
    <string name="url_post_blog">/post-blog-client</string>
    <string name="url_post_photos">/post-photos-client</string>
    <string name="url_post_sound">/post-sound-client</string>
    <string name="url_post_video">/post-video-client</string>
    <string name="url_post_message">/post-message-client</string>
    <string name="url_post_poll">/post-poll-client</string>

    <string name="share_preference_file">com.kaidi.fordrinking.SharePreference</string>
    <string name="share_pref_init_state">init-state</string>
    <string name="share_pref_curr_uid">current-uid</string>




</resources>
