<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp">
        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/blog_image_gravatar"
                android:layout_gravity="center"
                android:background="#ff0000"
                android:layout_marginLeft="12dp">
        </ImageView>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginLeft="56dp"
                      android:layout_marginRight="56dp">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/blog_text_username"
                      android:textSize="18dp"
                      android:text="From Kaidi"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/blog_text_postdate"
                      android:textSize="18dp"
                      android:text="2012-3-23 09:34:22"/>
        </LinearLayout>
        <ImageButton android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:id="@+id/home_blog_action_btn"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <WebView android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/home_blog_content">

    </WebView>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/home_repost_btn"
                android:padding="12dp"
                android:background="#ff43565e">
            <com.kaidi.fordrinking.view.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_repost"
                    android:textSize="18dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Repost"
                    android:textSize="16dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/home_comment_btn"
                android:padding="12dp"
                android:background="#ff43565e">
            <com.kaidi.fordrinking.view.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_comment"
                    android:textSize="18dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Comment"
                    android:textSize="16dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/home_like_btn"
                android:padding="12dp"
                android:background="#ff43565e">
            <com.kaidi.fordrinking.view.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_like"
                    android:textSize="18dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Like"
                    android:textSize="16dp"
                    />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>